--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "node-ex-website",
     "version": "1.0.0",
     "description": "First application in JS",
+    "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "start": "node server.js"
@@ -11,5 +12,6 @@
         "express": "^4.18.3",
         "path": "^0.12.7"
     },
-    "author": "bastienyoussfi"
+    "author": "bastienyoussfi",
+    "license": "MIT"
 }
